src/css/Illustration.css
.Image-Container {
  position: relative;
  top: -58px;
  width: 100%;
  height: 60dvh;
  overflow-x: hidden;
}
.Image-Container .Illustration-Wrapper {
  position: relative;
  width: 100%;
  min-height: 60dvh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.Illustration-Decoration {
  position: absolute;
  width: 60dvh;
  height: 100%;
  background-color: white;
  border-radius: 50%;
}
.Illustration-Image {
  display: flex;
  justify-content: center;
  max-width: 400px;
  position: relative;
  z-index: 2;
  left: 10px;
}
.Illustration-Image img {
  width: 70%;
  height: 70%;
}
@media screen and (min-width: 1000px) {
  .Image-Container .Illustration-Wrapper {
    position: relative;
    z-index: 2;
    width: 100%;
    min-height: 60dvh;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}
/* .Image-Container {
  display: flex;
  justify-content: center;
  width: 100%;
}
.Illustration-Section {
  display: flex;
  height: 700px;
  justify-content: center;
  position: relative;
  top: -66px;
  width: 1200px;
  z-index: 1;
}
.Illustration-Wrapper {
  border-radius: 100%;
  background-color: rgb(255, 255, 255);
  height: 700px;
  width: 700px;
}
.Illustration-Image {
  display: flex;
  justify-content: center;
  margin-top: 120px;
}
.Illustration-Svg {
  max-width: 400px;
} */

